# WikiParser

./: README.md  pyproject.toml  requirements.txt
notebooks/: wiki_dump_converter_colab.ipynb
scripts/: convert_wiki_dump.py  create_demo_output.py
tests/: test_dump_converter.py
wikiparser/: __init__.py  dump_converter.py  html_builder.py  ontology_writer.py  s3_io.py
